<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.example.mond.googlemaprealm.view.AddMarkerDialogFragment">

    <EditText
        android:id="@+id/detail_marker_activity_title_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_title"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/add_marker_introduce_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <ImageView
        android:id="@+id/detail_marker_activity_marker_ico_variant_3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/marker_3"
        android:layout_below="@+id/detail_marker_activity_title_input"
        android:layout_toRightOf="@+id/detail_marker_activity_marker_ico_variant_2"
        android:layout_toEndOf="@+id/detail_marker_activity_marker_ico_variant_2"/>

    <ImageView
        android:id="@+id/detail_marker_activity_marker_ico_variant_4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/marker_4"
        android:layout_below="@+id/detail_marker_activity_title_input"
        android:layout_toRightOf="@+id/detail_marker_activity_marker_ico_variant_3"
        android:layout_toEndOf="@+id/detail_marker_activity_marker_ico_variant_3"/>

    <ImageView
        android:id="@+id/detail_marker_activity_marker_ico_variant_2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/marker_2"
        android:layout_below="@+id/detail_marker_activity_title_input"
        android:layout_toRightOf="@+id/detail_marker_activity_marker_ico_variant_1"
        android:layout_toEndOf="@+id/detail_marker_activity_marker_ico_variant_1"/>

    <ImageView
        android:id="@+id/detail_marker_activity_marker_ico_variant_1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/marker_1"
        android:layout_below="@+id/detail_marker_activity_title_input"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/location_generator_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/text_generate"
        android:layout_below="@+id/location_generator_count_input"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/location_generator_count_input"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_count"
        android:inputType="number"
        android:layout_alignBaseline="@+id/location_generator_radius_input"
        android:layout_alignBottom="@+id/location_generator_radius_input"
        android:layout_toRightOf="@+id/detail_marker_activity_marker_ico_variant_3"
        android:layout_toEndOf="@+id/detail_marker_activity_marker_ico_variant_3"/>

    <TextView
        android:id="@+id/add_marker_introduce_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/text_add_marker_introduce"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/add_marker_generation_introduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/detail_marker_activity_marker_ico_variant_3"
        android:layout_marginTop="13dp"
        android:text="@string/text_generate_introduce"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/location_generator_radius_input"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/add_marker_generation_introduce"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/hint_radius"
        android:inputType="number"/>

</RelativeLayout>